[gd_scene load_steps=3 format=2]

[ext_resource path="res://Src/Scenes/Scripts/Main_UI.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 600.0
margin_bottom = 450.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 592.0
margin_bottom = 442.0

[node name="Item" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 584.0
margin_bottom = 434.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 16

[node name="Header" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Item"]
margin_right = 584.0
margin_bottom = 50.0

[node name="Download" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Item/Header"]
unique_name_in_owner = true
margin_right = 75.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )
hint_tooltip = "Click to create a new process that downloads the video using yt-dlp"
text = "Download"
icon_align = 1

[node name="TypeList" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/Item/Header"]
unique_name_in_owner = true
margin_left = 79.0
margin_right = 207.0
margin_bottom = 50.0
rect_min_size = Vector2( 128, 0 )
icon_align = 1

[node name="Playlist" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/Item/Header"]
unique_name_in_owner = true
margin_left = 211.0
margin_right = 339.0
margin_bottom = 50.0
rect_min_size = Vector2( 128, 0 )
icon_align = 1

[node name="FilePath_HB" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Item"]
margin_top = 66.0
margin_right = 584.0
margin_bottom = 116.0

[node name="FilePath" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/Item/FilePath_HB"]
unique_name_in_owner = true
margin_right = 520.0
margin_bottom = 50.0
hint_tooltip = "Current output folder path"
size_flags_horizontal = 3
editable = false

[node name="Browse" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Item/FilePath_HB"]
unique_name_in_owner = true
margin_left = 524.0
margin_right = 584.0
margin_bottom = 50.0
rect_min_size = Vector2( 60, 50 )
hint_tooltip = "Browse for download directory path"
text = "Browse"
icon_align = 1

[node name="VSplitContainer" type="VSplitContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Item"]
margin_top = 132.0
margin_right = 584.0
margin_bottom = 434.0
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 8

[node name="HttpContent" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Item/VSplitContainer"]
margin_right = 584.0
margin_bottom = 240.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LinkText" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/Item/VSplitContainer/HttpContent"]
unique_name_in_owner = true
margin_right = 520.0
margin_bottom = 240.0
hint_tooltip = "Paste https:// video link here"
size_flags_horizontal = 3
size_flags_vertical = 3
show_line_numbers = true
draw_tabs = true
wrap_enabled = true

[node name="ClearText" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Item/VSplitContainer/HttpContent"]
unique_name_in_owner = true
margin_left = 524.0
margin_top = 95.0
margin_right = 584.0
margin_bottom = 145.0
rect_min_size = Vector2( 60, 50 )
hint_tooltip = "Clears text field"
size_flags_vertical = 4
text = "Clear"
icon_align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Item/VSplitContainer"]
margin_top = 252.0
margin_right = 584.0
margin_bottom = 302.0
rect_min_size = Vector2( 0, 50 )

[node name="OutputLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Item/VSplitContainer/HBoxContainer"]
margin_top = 18.0
margin_right = 49.0
margin_bottom = 32.0
text = "Output:"
valign = 1

[node name="Output" type="TextEdit" parent="PanelContainer/MarginContainer/VBoxContainer/Item/VSplitContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 53.0
margin_right = 584.0
margin_bottom = 50.0
size_flags_horizontal = 3
size_flags_vertical = 3
wrap_enabled = true

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Open a Directory"
dialog_hide_on_ok = true
mode = 2
access = 2

[connection signal="dir_selected" from="FileDialog" to="." method="_on_FileDialog_dir_selected"]
